--- a/css.css
+++ b/css.css
@@ -6,13 +6,22 @@ body{
     height: 100%; 
     overflow: hidden;}
 
+#fullscreen_background_image{
+    width: 100%; height:100%;
+    background-color: white;}
+
+.deselect ::selection {background: transparent;color: inherit;}
+.deselect ::-moz-selection {background: transparent;color: inherit;}
+.deselect {-ms-user-select: none; -webkit-user-select: none; -moz-user-select: none; user-select: none;}
+
 /*########################################################################################################################*/
 
-.button{
-    width: 150px;
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid black;}
+.fly{
+    position: absolute;
+    background-image: url(images/fliegeOpacity30.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;}
 
-#button_on:hover{cursor: pointer; background-color: turquoise;}
-#button_off:hover{cursor: pointer; background-color: yellow;}
+.collision{
+    border: 1px solid red;}
